# mausoleo_di_roma

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  page_count.html  pyproject.toml  scrape.py  scrape_messaggero.py  segment.py  segment_old.py  segment_yolo.py  test_batch.py
.github/workflows/: ci.yml
configs/ocr/: chandra_ocr2_v2_structured.py  col3_gemma3_9b_v2_structured.py  col4_chandra_ocr2_v2_structured.py  col4_florence2_large_ocr.py  col4_hunyuan_ocr_v1_structured.py  col4_hunyuan_ocr_v2_structured.py  col4_minicpm_o_v2_structured.py  col4_phi35_vision_v2_structured.py  col5_gemma3_9b_v2_structured.py  ensemble_30min.py  exp_002_prompt_v3_ads.py  exp_003_qwen25_7b_vllm.py  exp_005_qwen25_7b_vllm_col3.py  exp_007_no_crop.py  exp_011_col3_raw_cleanup_7b.py  exp_012_max_model_len_32k.py  exp_016_overlap_1pct.py  exp_024_chandra_ocr.py  exp_028_yolo_smallregion.py  exp_029_col3_overlap6.py  exp_031_internvl3_8b.py  exp_133_yolo_vllm_8k.py  florence2_base_ocr.py  florence2_large_ocr.py  gemma3_9b_v1_structured.py  gemma3_9b_v2_raw_cleanup.py  gemma3_9b_v2_structured.py  hunyuan_ocr_v1_structured.py  hunyuan_ocr_v2_structured.py  minicpm_o_4bit_v2_structured.py  minicpm_o_v1_structured.py  minicpm_o_v2_raw_cleanup.py  minicpm_o_v2_structured.py  phi35_vision_v2_raw_cleanup.py  phi35_vision_v2_structured.py  preproc_hunyuan_ocr_fp16_v1_structured.py  preproc_hunyuan_ocr_v1_structured.py
eval/: leaderboard.txt  section_5_spotcheck.json
eval/autoresearch/: log.jsonl  program.md
eval/case_studies/: RUNLOG.md  aggregate.json  case3_oracle_ratios.json  relevance_gt.json
eval/critics/: STAGE_B_LOG.md  round10_gan.md  round11_gan.md  round12_gan.md  round13_gan.md  round14_gan.md  round15_gan.md  round16_gan.md  round17_gan.md  round18_gan.md  round19_gan.md  round1_citation.md  round1_coherence.md  round1_gan.md  round1_plagiarism.md  round1_rubric.md  round20_gan.md  round21_gan.md  round22_gan.md  round23_gan.md  round24_gan.md  round25_gan.md  round26_gan.md  round27_gan.md  round28_gan.md  round29_gan.md  round2_citation.md  round2_coherence.md  round2_gan.md  round2_rubric.md  round2_summary.md  round30_gan.md  round31_gan.md  round32_gan.md  round33_gan.md  round34_gan.md  round35_gan.md  round36_gan.md  round37_gan.md  round38_gan.md  (+119 more)
eval/predictions/: ensemble_30min_1943-07-01.json  ensemble_30min_1943-07-02.json  ensemble_30min_1943-07-03.json  ensemble_30min_1943-07-04.json  ensemble_30min_1943-07-05.json  ensemble_30min_1943-07-06.json  ensemble_30min_1943-07-07.json  ensemble_30min_1943-07-08.json  ensemble_30min_1943-07-09.json  ensemble_30min_1943-07-10.json  ensemble_30min_1943-07-11.json  ensemble_30min_1943-07-12.json  (+244 more)
plan/: 01_ocr.md  05_packaging.md
references/: MAUSOLEO_FULL_DRAFT_v1.md  MAUSOLEO_FULL_DRAFT_v10.md  MAUSOLEO_FULL_DRAFT_v2.md  MAUSOLEO_FULL_DRAFT_v3.md  MAUSOLEO_FULL_DRAFT_v4.md  MAUSOLEO_FULL_DRAFT_v5.md  MAUSOLEO_FULL_DRAFT_v6.md  MAUSOLEO_FULL_DRAFT_v7.md  MAUSOLEO_FULL_DRAFT_v8.md  MAUSOLEO_FULL_DRAFT_v9.md  case_1_variance_note.md  draft_abstract.md  draft_preface.md  draft_section_1.md  draft_section_2.md  draft_section_3.md  draft_section_4.md  draft_section_5.md  draft_section_6_pre.md  draft_section_7.md  draft_section_8.md  outline.md  section_3_diagrams.md  section_4_ocr_data.md  section_5_spotcheck.md  section_6_5_cost_data.md  section_6_5_results.md
scripts/: add_articles_1885.py  build_case3_oracle.py  build_index.py  cleanup_gt_1885.py  cleanup_transcriptions.py  dev.py  eval_article_metrics.py  generate_eval_html.py  render_section_6_5.py  run_experiment.py  run_real_ocr.py  section_5_spotcheck.py  update_gt_1885.py  verify_index.py
tests/: test_end_to_end.py  test_segment.py  test_yolo.py
(+6821 files in other folders)
