[project]
name = "sdr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "doclayout-yolo>=0.0.3",
  "huggingface-hub>=0.29.2",
  "playwright>=1.50.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "httpx>=0.28.1",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git", rev = "v0.5" }

[tool.ruff]
line-length = 144
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
ignore = ["E402", "E702", "E731", "UP008", "E712"]
extend-select = ["UP"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
